--- a/index.html
+++ b/index.html
@@ -114,8 +114,13 @@
           <!-- promo code -->
           <div class="mt-3">
             <h3 class="text-xl">Add Promo code</h3>
-            <input class="border-2 py-2 rounded focus:ring-2 focus:ring-blue-600 outline-none" type="text" />
+            <input
+              id="user-input"
+              class="border-2 py-2 rounded focus:ring-2 focus:ring-blue-600 outline-none"
+              type="text"
+            />
             <button
+              id="apply-button"
               class="
                 border
                 py-2
