finall and submit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- main section -->
-    <main class="container px-16">
+    <main class="container px-16 py-10">
       <section class="grid grid-cols-2">
         <!-- image container -->
         <div>
@@ -141,7 +141,9 @@
       </section>
       <hr class="mt-5" />
       <!-- final Total -->
-      <h2 class="text-4xl font-bold text-center mt-2">Total: $<span id="final-price">1299</span></h2>
+      <section>
+        <h2 class="text-4xl font-bold text-center mt-2">Total: $<span id="final-price">1299</span></h2>
+      </section>
     </main>
     <!-- main js connect -->
     <script src="js/main.js"></script>
