--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           </div>
           <!-- promo code -->
           <div class="mt-3">
-            <h3 class="text-xl">Add Promo code</h3>
+            <h3 class="text-xl">Add Promo code here</h3>
             <input
               id="user-input"
               class="border-2 py-2 rounded focus:ring-2 focus:ring-blue-600 outline-none"
